changed site title to BIBLE NOTES

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://jonathansantiago.netlify.app/" # the base hostname & protocol for 
 # your social media links etc
 #######################################################################
 
-heading: Discipleship City
+heading: BIBLE NOTES
 subheading: # subheading won't work without a tagline,
           # tagline is mandatory if you want the
           # suheading to appear. The reason is
