--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,15 @@ preferences:
     enabled: true
   highlighting:
     enabled: true
-    color: DAEDFF # Takes hexadecimal and basic names like white, red, etc.
+    color: e05968
+                  # Takes hexadecimal and basic names like white, red, etc.
                   # Do not add '#'(the pound symbol) before the hexadecimal number.
                   # In yml, it is considered as a comment
   backlinks:
     enabled: true
   related:
-    enabled: true # This enables the posts that are related to each other by tags
+    enabled: true
+    # This enables the posts that are related to each other by tags
   wrapping:
     enabled: true
   contextmenu:
